--- a/css/reset.css
+++ b/css/reset.css
@@ -1,87 +1,72 @@
 @charset "utf-8";
-/* CSS 초기화 */
 
-html, body, div, span, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,abbr, address, cite, code,del, dfn,em, img, ins, kbd, q, samp,small, strong, sub, sup, var,b, i,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary,time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
+  margin:0;  padding:0;  border:0;  outline:0;  font-size:100%;
+  vertical-align:baseline;  background:transparent;
 }
-
 body {
-    line-height:1;
+  line-height:1; /* 줄간격 100% */
+}
+/* html5 추가 태그로서 구형 브라우저에서 인식이 안되는것을 블럭요소로 인식되게 하기위함  */
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section { 
+  display:block;
 }
 
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section { 
-    display:block;
-}
+/* 목록앞에 기호숨기기 */
+  ul, ol, li{ list-style:none; }
 
-ol, ul, li{
-    list-style:none;
-}
+  /* 인문문 기호 숨기기 */
+  blockquote, q { quotes:none;}
 
-blockquote, q {
-    quotes:none;
-}
+  /* 인용문 앞, 뒤쪽에 빈공간을 만듬 */
+  blockquote:before, blockquote:after,
+  q:before, q:after {
+  content:'';
+  content:none;
+  }
 
-blockquote:before, blockquote:after,q:before, q:after {
-    content:'';
-    content:none;
-}
-
-a {
+  a {
     margin:0;
     padding:0;
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
-}
-
-/* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
-}
-
-/* change colours to suit your needs */
-mark {
+  }
+ /* 내용이 추가된 곳에 배경색, 글자색 적용, change colours to suit your needs */
+  ins {
+  background-color:#ff9;
+  color:#000;
+  text-decoration:none;
+  }
+ /* change colours to suit your needs */
+  mark {
     background-color:#ff9;
     color:#000; 
     font-style:italic;
     font-weight:bold;
-}
-
-del {
+  }
+  del {
     text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
+  } 
+  abbr[title], dfn[title] {
     border-bottom:1px dotted;
     cursor:help;
-}
-
-table {
+  }
+  table {
     border-collapse:collapse;
     border-spacing:0;
-}
-
-/* change border colour to suit your needs */
-hr {
+  }
+ /* change border colour to suit your needs */
+  hr {
     display:block;
     height:1px;
-    border:0;   
+    border:0; 
     border-top:1px solid #cccccc;
     margin:1em 0;
     padding:0;
-}
-
-input, select {
+  }
+  input, select {
     vertical-align:middle;
-}
-
-
-address{font-style:normal;}
+  }
